--- a/portfoilo.html
+++ b/portfoilo.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sneha | AI/ML Portfolio</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-
 <body class="bg-gray-100 text-gray-800">
+
   <!-- Header -->
   <header class="bg-white shadow p-6 text-center">
     <h1 class="text-3xl font-bold">Sneha</h1>
@@ -19,7 +18,8 @@
   <section class="p-6 max-w-3xl mx-auto">
     <h2 class="text-2xl font-semibold mb-2">About Me</h2>
     <p>
-      Hi, I'm Sneha — a final-year BCA student passionate about AI, LLMs, and building real-world ML solutions. I'm aiming to become an LLM engineer and currently working on OpenAI-based chatbots and transformer-powered tools.
+      Hi, I'm Sneha — a final-year BCA student passionate about AI, LLMs, and building real-world ML solutions. 
+      I'm aiming to become an LLM engineer and currently working on OpenAI-based chatbots and transformer-powered tools.
     </p>
   </section>
 
@@ -40,21 +40,28 @@
       <!-- Project 1 -->
       <div class="bg-white p-4 rounded-lg shadow">
         <h3 class="text-xl font-bold">AI Chatbot using OpenAI</h3>
-        <p class="mt-2">Built a chatbot with context-aware responses using OpenAI’s GPT API and Streamlit for the interface.</p>
+        <p class="mt-2">
+          Built a chatbot with context-aware responses using OpenAI’s GPT API and Streamlit for the interface.
+        </p>
         <a href="https://github.com/Sneha12325" class="text-blue-600 underline mt-2 inline-block">GitHub Link</a>
       </div>
 
       <!-- Project 2 -->
       <div class="bg-white p-4 rounded-lg shadow">
         <h3 class="text-xl font-bold">Image Caption Generator</h3>
-        <p class="mt-2">Used CNN + Transformer to generate captions for images trained on the Flickr8k dataset. Focused on integrating visual and NLP components.</p>
+        <p class="mt-2">
+          Used CNN + Transformer to generate captions for images trained on the Flickr8k dataset. 
+          Focused on integrating visual and NLP components.
+        </p>
         <a href="https://github.com/Sneha12325" class="text-blue-600 underline mt-2 inline-block">GitHub Link</a>
       </div>
 
       <!-- Project 3 -->
       <div class="bg-white p-4 rounded-lg shadow">
         <h3 class="text-xl font-bold">Mini LLM QA App</h3>
-        <p class="mt-2">Built a simple LLM-powered question-answering app using HuggingFace Transformers and a web UI.</p>
+        <p class="mt-2">
+          Built a simple LLM-powered question-answering app using HuggingFace Transformers and a web UI.
+        </p>
         <a href="https://github.com/Sneha12325" class="text-blue-600 underline mt-2 inline-block">GitHub Link</a>
       </div>
     </div>
@@ -72,6 +79,6 @@
   <footer class="text-center text-sm text-gray-500 mt-6 pb-6">
     © 2025 Sneha. All rights reserved.
   </footer>
-</body>
 
+</body>
 </html>
