--- a/index.html
+++ b/index.html
@@ -25,12 +25,13 @@
 
   <!-- Skills Section -->
   <section class="bg-white p-6 mt-4 max-w-3xl mx-auto rounded-xl shadow">
-    <h2 class="text-2xl font-semibold mb-2">Skills</h2>
-    <ul class="list-disc list-inside">
-      <li><strong>Languages:</strong> Python, C, HTML, CSS, JavaScript</li>
-      <li><strong>ML Tools:</strong> scikit-learn, OpenAI API, HuggingFace, Transformers, TensorFlow</li>
-      <li><strong>Others:</strong> Streamlit, Git, GitHub, REST APIs</li>
-    </ul>
+    <h2 class="text-2xl font-bold mb-2">Skills</h2>
+<ul class="list-disc ml-6">
+  <li><strong>Languages:</strong> Python, C, HTML, CSS</li>
+  <li><strong>Learning:</strong> JavaScript, Git, GitHub, Streamlit, REST APIs</li>
+  <li><strong>Goal (Next 30 days):</strong> OpenAI API, Transformers, ML Models</li>
+</ul>
+
   </section>
 
   <!-- Projects Section -->
@@ -82,3 +83,4 @@
 
 </body>
 </html>
+
