--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <!-- Contact Section -->
   <section class="bg-white p-6 mt-4 max-w-3xl mx-auto rounded-xl shadow text-center">
     <h2 class="text-2xl font-semibold mb-2">Contact Me</h2>
-    <p>Email: <a href="mailto:youremail@example.com" class="text-blue-600 underline">youremail@example.com</a></p>
+    <p>Email: <a href="mailto:snehapmadhu@gmail.com" class="text-blue-600 underline">youremail@example.com</a></p>
     <p>LinkedIn: <a href="https://www.linkedin.com/in/sneha-p-93b9ab287" class="text-blue-600 underline">sneha-p-93b9ab287</a></p>
     <p>GitHub: <a href="https://github.com/Sneha12325" class="text-blue-600 underline">Sneha12325</a></p>
   </section>
@@ -83,4 +83,5 @@
 
 </body>
 </html>
+
 
