Revamp portfolio page layout and design
Updated the layout and styling of the portfolio page using Tailwind CSS. Enhanced sections for About, Skills, Projects, and Contact with improved design and additional project details.

--- a/index.html
+++ b/index.html
@@ -6,83 +6,93 @@
   <title>Sneha | AI/ML Portfolio</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100 text-gray-800">
+<body class="bg-gradient-to-br from-gray-50 to-gray-200 text-gray-800 min-h-screen">
 
   <!-- Header -->
-  <header class="bg-white shadow p-6 text-center">
-    <h1 class="text-3xl font-bold">Sneha</h1>
-    <p class="text-lg">AI/ML Enthusiast | BCA Data Science Student</p>
+  <header class="bg-white shadow-md py-8 text-center">
+    <h1 class="text-4xl font-extrabold text-gray-900">Sneha</h1>
+    <p class="text-lg text-gray-600 mt-1">AI/ML Enthusiast · BCA Data Science Student</p>
   </header>
 
   <!-- About Section -->
-  <section class="p-6 max-w-3xl mx-auto">
-    <h2 class="text-2xl font-semibold mb-2">About Me</h2>
-    <p>
-      Hi, I'm Sneha — a final-year BCA student passionate about AI, LLMs, and building real-world ML solutions. 
-      I'm aiming to become an LLM engineer and currently working on OpenAI-based chatbots and transformer-powered tools.
+  <section class="p-6 max-w-3xl mx-auto mt-8 bg-white rounded-xl shadow-md">
+    <h2 class="text-2xl font-semibold mb-3 text-gray-800 border-b pb-2">About Me</h2>
+    <p class="leading-relaxed">
+      Hi, I'm <strong>Sneha</strong> — a final-year BCA student passionate about 
+      <strong>AI, LLMs, and data-driven innovation</strong>. 
+      My goal is to become an <strong>LLM Engineer</strong> and build scalable, real-world AI solutions. 
+      Currently, I’m exploring <strong>OpenAI APIs</strong>, <strong>transformers</strong>, and 
+      <strong>backend integration for AI apps</strong>.
     </p>
   </section>
 
   <!-- Skills Section -->
-  <section class="bg-white p-6 mt-4 max-w-3xl mx-auto rounded-xl shadow">
-    <h2 class="text-2xl font-bold mb-2">Skills</h2>
-<ul class="list-disc ml-6">
-  <li><strong>Languages:</strong> Python, C, HTML, CSS</li>
-  <li><strong>Learning:</strong> JavaScript, Git, GitHub, Streamlit, REST APIs</li>
-  <li><strong>Goal (Next 30 days):</strong> OpenAI API, Transformers, ML Models</li>
-</ul>
-
+  <section class="bg-white p-6 mt-6 max-w-3xl mx-auto rounded-xl shadow-md">
+    <h2 class="text-2xl font-semibold mb-3 border-b pb-2">Skills</h2>
+    <ul class="list-disc ml-6 space-y-1">
+      <li><strong>Languages:</strong> Python, C, HTML, CSS</li>
+      <li><strong>Learning:</strong> JavaScript, Git, GitHub, Streamlit, REST APIs</li>
+      <li><strong>Next Focus:</strong> OpenAI API, Transformers, ML Models, FastAPI</li>
+    </ul>
   </section>
 
   <!-- Projects Section -->
-  <section class="p-6 mt-4 max-w-3xl mx-auto">
-    <h2 class="text-2xl font-semibold mb-4">Projects</h2>
-    <div class="space-y-4">
+  <section class="p-6 mt-6 max-w-3xl mx-auto bg-white rounded-xl shadow-md">
+    <h2 class="text-2xl font-semibold mb-4 border-b pb-2">Projects</h2>
+    <div class="space-y-5">
+      
       <!-- Project 1 -->
-      <div class="bg-white p-4 rounded-lg shadow">
-        <h3 class="text-xl font-bold">AI Chatbot using OpenAI</h3>
-        <p class="mt-2">
-          Built a chatbot with context-aware responses using OpenAI’s GPT API and Streamlit for the interface.
+      <div class="bg-gray-50 p-4 rounded-lg hover:shadow-lg transition">
+        <h3 class="text-xl font-bold text-gray-900">🤖 AI Chatbot using OpenAI</h3>
+        <p class="mt-2 text-gray-700">
+          Built a chatbot with context-aware responses using OpenAI’s GPT API and Streamlit interface.
         </p>
-        <a href="https://github.com/Sneha12325" class="text-blue-600 underline mt-2 inline-block">GitHub Link</a>
+        <a href="https://github.com/Sneha12325" target="_blank" class="text-blue-600 underline mt-2 inline-block">GitHub Link</a>
       </div>
 
       <!-- Project 2 -->
-      <div class="bg-white p-4 rounded-lg shadow">
-        <h3 class="text-xl font-bold">Image Caption Generator</h3>
-        <p class="mt-2">
+      <div class="bg-gray-50 p-4 rounded-lg hover:shadow-lg transition">
+        <h3 class="text-xl font-bold text-gray-900">🖼️ Image Caption Generator</h3>
+        <p class="mt-2 text-gray-700">
           Used CNN + Transformer to generate captions for images trained on the Flickr8k dataset. 
-          Focused on integrating visual and NLP components.
+          Combined visual and NLP components for image understanding.
         </p>
-        <a href="https://github.com/Sneha12325" class="text-blue-600 underline mt-2 inline-block">GitHub Link</a>
+        <a href="https://github.com/Sneha12325" target="_blank" class="text-blue-600 underline mt-2 inline-block">GitHub Link</a>
       </div>
 
       <!-- Project 3 -->
-      <div class="bg-white p-4 rounded-lg shadow">
-        <h3 class="text-xl font-bold">Mini LLM QA App</h3>
-        <p class="mt-2">
-          Built a simple LLM-powered question-answering app using HuggingFace Transformers and a web UI.
+      <div class="bg-gray-50 p-4 rounded-lg hover:shadow-lg transition">
+        <h3 class="text-xl font-bold text-gray-900">💬 Mini LLM QA App</h3>
+        <p class="mt-2 text-gray-700">
+          Developed a simple LLM-powered Q&A app using HuggingFace Transformers with a minimal web UI.
         </p>
-        <a href="https://github.com/Sneha12325" class="text-blue-600 underline mt-2 inline-block">GitHub Link</a>
+        <a href="https://github.com/Sneha12325" target="_blank" class="text-blue-600 underline mt-2 inline-block">GitHub Link</a>
       </div>
+
+      <!-- Project 4 -->
+      <div class="bg-gray-50 p-4 rounded-lg hover:shadow-lg transition">
+        <h3 class="text-xl font-bold text-gray-900">⚡ AI Summarizer (FastAPI + Gradio)</h3>
+        <p class="mt-2 text-gray-700">
+          Built a lightning-fast text summarization app using HuggingFace Transformers, deployed on Hugging Face Spaces.
+        </p>
+        <a href="https://huggingface.co/spaces/Sneha7676P/ai-summarizer-fast" target="_blank" class="text-blue-600 underline mt-2 inline-block">Live Demo</a>
+      </div>
+
     </div>
   </section>
 
   <!-- Contact Section -->
-  <section class="bg-white p-6 mt-4 max-w-3xl mx-auto rounded-xl shadow text-center">
-    <h2 class="text-2xl font-semibold mb-2">Contact Me</h2>
-    <p>Email: <a href="mailto:snehapmadhu@gmail.com" class="text-blue-600 underline">snehapmadhu@gmail.com</a></p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/sneha-p-93b9ab287" class="text-blue-600 underline">sneha-p-93b9ab287</a></p>
-    <p>GitHub: <a href="https://github.com/Sneha12325" class="text-blue-600 underline">Sneha12325</a></p>
+  <section class="bg-white p-6 mt-6 max-w-3xl mx-auto rounded-xl shadow-md text-center">
+    <h2 class="text-2xl font-semibold mb-3 border-b pb-2">Contact Me</h2>
+    <p class="mt-1">📧 <a href="mailto:snehapmadhu@gmail.com" class="text-blue-600 underline">snehapmadhu@gmail.com</a></p>
+    <p class="mt-1">🔗 <a href="https://www.linkedin.com/in/sneha-p-93b9ab287" target="_blank" class="text-blue-600 underline">LinkedIn</a></p>
+    <p class="mt-1">💻 <a href="https://github.com/Sneha12325" target="_blank" class="text-blue-600 underline">GitHub</a></p>
   </section>
 
   <!-- Footer -->
-  <footer class="text-center text-sm text-gray-500 mt-6 pb-6">
-    © 2025 Sneha. All rights reserved.
+  <footer class="text-center text-sm text-gray-500 mt-8 pb-6">
+    © 2025 Sneha — Built with ❤️ using HTML & Tailwind CSS
   </footer>
 
 </body>
 </html>
-
-
-
