--- a/index.html
+++ b/index.html
@@ -4,94 +4,112 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sneha | AI/ML Portfolio</title>
+  <meta name="description" content="Sneha's AI/ML portfolio — BCA Data Science student building AI apps with Flask, FastAPI, and Transformers.">
+  <meta property="og:title" content="Sneha | AI/ML Portfolio">
+  <meta property="og:description" content="AI/ML Enthusiast | Building real-world AI apps using Python, FastAPI, and Hugging Face">
+  <meta property="og:type" content="website">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gradient-to-br from-gray-50 to-gray-200 text-gray-800 min-h-screen">
+
+<body class="bg-gradient-to-br from-gray-50 to-gray-100 text-gray-800 min-h-screen font-sans tracking-wide">
 
   <!-- Header -->
-  <header class="bg-white shadow-md py-8 text-center">
-    <h1 class="text-4xl font-extrabold text-gray-900">Sneha</h1>
-    <p class="text-lg text-gray-600 mt-1">AI/ML Enthusiast · BCA Data Science Student</p>
+  <header class="bg-white shadow-lg py-10 text-center">
+    <h1 class="text-5xl font-extrabold text-gray-900">Sneha</h1>
+    <p class="text-lg text-gray-600 mt-2">AI/ML Developer • BCA Data Science Student • Backend Builder</p>
   </header>
 
-  <!-- About Section -->
-  <section class="p-6 max-w-3xl mx-auto mt-8 bg-white rounded-xl shadow-md">
-    <h2 class="text-2xl font-semibold mb-3 text-gray-800 border-b pb-2">About Me</h2>
-    <p class="leading-relaxed">
+  <!-- About -->
+  <section class="p-6 max-w-3xl mx-auto mt-10 bg-white rounded-2xl shadow-md">
+    <h2 class="text-2xl font-semibold mb-4 text-gray-900 border-b pb-2">👩‍💻 About Me</h2>
+    <p class="leading-relaxed text-gray-700">
       Hi, I'm <strong>Sneha</strong> — a final-year BCA student passionate about 
-      <strong>AI, LLMs, and data-driven innovation</strong>. 
-      My goal is to become an <strong>LLM Engineer</strong> and build scalable, real-world AI solutions. 
-      Currently, I’m exploring <strong>OpenAI APIs</strong>, <strong>transformers</strong>, and 
-      <strong>backend integration for AI apps</strong>.
+      <strong>AI, LLMs, and backend systems</strong>. My focus is on building intelligent tools 
+      powered by <strong>OpenAI APIs</strong> and <strong>Transformers</strong>, with clean and scalable 
+      backend architecture using <strong>FastAPI</strong>.
     </p>
   </section>
 
-  <!-- Skills Section -->
-  <section class="bg-white p-6 mt-6 max-w-3xl mx-auto rounded-xl shadow-md">
-    <h2 class="text-2xl font-semibold mb-3 border-b pb-2">Skills</h2>
-    <ul class="list-disc ml-6 space-y-1">
+  <!-- Skills -->
+  <section class="bg-white p-6 mt-8 max-w-3xl mx-auto rounded-2xl shadow-md">
+    <h2 class="text-2xl font-semibold mb-4 border-b pb-2 text-gray-900">⚙️ Skills</h2>
+    <ul class="list-disc ml-6 space-y-1 text-gray-700">
       <li><strong>Languages:</strong> Python, C, HTML, CSS</li>
-      <li><strong>Learning:</strong> JavaScript, Git, GitHub, Streamlit, REST APIs</li>
-      <li><strong>Next Focus:</strong> OpenAI API, Transformers, ML Models, FastAPI</li>
+      <li><strong>Frameworks:</strong> Flask, FastAPI, Gradio</li>
+      <li><strong>Learning:</strong> JavaScript, REST APIs, Streamlit, OpenAI API</li>
+      <li><strong>Focus:</strong> Model Integration, LLM Engineering, AI Deployment</li>
     </ul>
   </section>
 
-  <!-- Projects Section -->
-  <section class="p-6 mt-6 max-w-3xl mx-auto bg-white rounded-xl shadow-md">
-    <h2 class="text-2xl font-semibold mb-4 border-b pb-2">Projects</h2>
-    <div class="space-y-5">
-      
-      <!-- Project 1 -->
-      <div class="bg-gray-50 p-4 rounded-lg hover:shadow-lg transition">
+  <!-- Projects -->
+  <section class="p-6 mt-8 max-w-3xl mx-auto bg-white rounded-2xl shadow-md">
+    <h2 class="text-2xl font-semibold mb-4 border-b pb-2 text-gray-900">🚀 Projects</h2>
+    <div class="space-y-6">
+
+      <!-- AI Chatbot -->
+      <div class="p-5 bg-gray-50 rounded-lg hover:shadow-lg transition transform hover:-translate-y-1">
         <h3 class="text-xl font-bold text-gray-900">🤖 AI Chatbot using OpenAI</h3>
         <p class="mt-2 text-gray-700">
-          Built a chatbot with context-aware responses using OpenAI’s GPT API and Streamlit interface.
+          Built a chatbot with context-aware responses using OpenAI’s GPT API and Streamlit.
         </p>
-        <a href="https://github.com/Sneha12325" target="_blank" class="text-blue-600 underline mt-2 inline-block">GitHub Link</a>
+        <div class="mt-3 flex space-x-3">
+          <a href="https://github.com/Sneha12325" target="_blank" class="px-4 py-2 bg-gray-800 text-white text-sm rounded-lg hover:bg-gray-900 transition">View Code</a>
+        </div>
       </div>
 
-      <!-- Project 2 -->
-      <div class="bg-gray-50 p-4 rounded-lg hover:shadow-lg transition">
+      <!-- Image Caption Generator -->
+      <div class="p-5 bg-gray-50 rounded-lg hover:shadow-lg transition transform hover:-translate-y-1">
         <h3 class="text-xl font-bold text-gray-900">🖼️ Image Caption Generator</h3>
         <p class="mt-2 text-gray-700">
-          Used CNN + Transformer to generate captions for images trained on the Flickr8k dataset. 
-          Combined visual and NLP components for image understanding.
+          Used CNN + Transformer to generate image captions on the Flickr8k dataset. 
+          Combines vision and NLP capabilities.
         </p>
-        <a href="https://github.com/Sneha12325" target="_blank" class="text-blue-600 underline mt-2 inline-block">GitHub Link</a>
+        <div class="mt-3 flex space-x-3">
+          <a href="https://github.com/Sneha12325" target="_blank" class="px-4 py-2 bg-gray-800 text-white text-sm rounded-lg hover:bg-gray-900 transition">View Code</a>
+        </div>
       </div>
 
-      <!-- Project 3 -->
-      <div class="bg-gray-50 p-4 rounded-lg hover:shadow-lg transition">
+      <!-- Mini LLM QA App -->
+      <div class="p-5 bg-gray-50 rounded-lg hover:shadow-lg transition transform hover:-translate-y-1">
         <h3 class="text-xl font-bold text-gray-900">💬 Mini LLM QA App</h3>
         <p class="mt-2 text-gray-700">
-          Developed a simple LLM-powered Q&A app using HuggingFace Transformers with a minimal web UI.
+          Built a question-answering interface using HuggingFace Transformers with a minimal frontend.
         </p>
-        <a href="https://github.com/Sneha12325" target="_blank" class="text-blue-600 underline mt-2 inline-block">GitHub Link</a>
+        <div class="mt-3 flex space-x-3">
+          <a href="https://github.com/Sneha12325" target="_blank" class="px-4 py-2 bg-gray-800 text-white text-sm rounded-lg hover:bg-gray-900 transition">View Code</a>
+        </div>
       </div>
 
-      <!-- Project 4 -->
-      <div class="bg-gray-50 p-4 rounded-lg hover:shadow-lg transition">
-        <h3 class="text-xl font-bold text-gray-900">⚡ AI Summarizer (FastAPI + Gradio)</h3>
+      <!-- AI Summarizer -->
+      <div class="p-5 bg-gray-50 rounded-lg hover:shadow-lg transition transform hover:-translate-y-1">
+        <h3 class="text-xl font-bold text-gray-900">⚡ AI Summarizer (Flask + FastAPI)</h3>
         <p class="mt-2 text-gray-700">
-          Built a lightning-fast text summarization app using HuggingFace Transformers, deployed on Hugging Face Spaces.
+          Developed a complete text summarizer using HuggingFace Transformers. 
+          Flask version for full UI/UX, and a Gradio + FastAPI version for faster performance.
         </p>
-        <a href="https://huggingface.co/spaces/Sneha7676P/ai-summarizer-fast" target="_blank" class="text-blue-600 underline mt-2 inline-block">Live Demo</a>
+        <div class="mt-3 flex space-x-3">
+          <a href="https://github.com/Sneha12325/AI-Text-Summarizer" target="_blank" class="px-4 py-2 bg-gray-800 text-white text-sm rounded-lg hover:bg-gray-900 transition">View Code</a>
+          <a href="https://huggingface.co/spaces/Sneha7676P/ai-summarizer-fast" target="_blank" class="px-4 py-2 bg-blue-600 text-white text-sm rounded-lg hover:bg-blue-700 transition">Live Demo</a>
+        </div>
       </div>
 
     </div>
   </section>
 
-  <!-- Contact Section -->
-  <section class="bg-white p-6 mt-6 max-w-3xl mx-auto rounded-xl shadow-md text-center">
-    <h2 class="text-2xl font-semibold mb-3 border-b pb-2">Contact Me</h2>
-    <p class="mt-1">📧 <a href="mailto:snehapmadhu@gmail.com" class="text-blue-600 underline">snehapmadhu@gmail.com</a></p>
-    <p class="mt-1">🔗 <a href="https://www.linkedin.com/in/sneha-p-93b9ab287" target="_blank" class="text-blue-600 underline">LinkedIn</a></p>
-    <p class="mt-1">💻 <a href="https://github.com/Sneha12325" target="_blank" class="text-blue-600 underline">GitHub</a></p>
+  <!-- Contact -->
+  <section class="bg-white p-6 mt-8 max-w-3xl mx-auto rounded-2xl shadow-md text-center">
+    <h2 class="text-2xl font-semibold mb-3 border-b pb-2 text-gray-900">📫 Contact Me</h2>
+    <p class="text-gray-700">Feel free to reach out for collaborations, internships, or projects.</p>
+    <div class="mt-4 space-y-1">
+      <p>📧 <a href="mailto:snehapmadhu@gmail.com" class="text-blue-600 underline">snehapmadhu@gmail.com</a></p>
+      <p>🔗 <a href="https://www.linkedin.com/in/sneha-p-93b9ab287" target="_blank" class="text-blue-600 underline">LinkedIn</a></p>
+      <p>💻 <a href="https://github.com/Sneha12325" target="_blank" class="text-blue-600 underline">GitHub</a></p>
+    </div>
   </section>
 
   <!-- Footer -->
-  <footer class="text-center text-sm text-gray-500 mt-8 pb-6">
-    © 2025 Sneha — Built with ❤️ using HTML & Tailwind CSS
+  <footer class="text-center text-sm text-gray-500 mt-10 pb-6">
+    © 2025 Sneha — Built with ❤️ using HTML + Tailwind CSS
   </footer>
 
 </body>
