--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <h2 class="text-2xl font-semibold mb-4 text-gray-900 border-b pb-2">👩‍💻 About Me</h2>
     <p class="leading-relaxed text-gray-700">
       Hi, I'm <strong>Sneha</strong> — a final-year BCA student passionate about 
-      <strong>AI, LLMs, and backend systems</strong>. My focus is on building intelligent tools 
+      <strong>AI, ML models, and backend systems</strong>. My focus is on building intelligent tools 
       powered by <strong>OpenAI APIs</strong> and <strong>Transformers</strong>, with clean and scalable 
       backend architecture using <strong>FastAPI</strong>.
     </p>
@@ -37,7 +37,7 @@
       <li><strong>Languages:</strong> Python, C, HTML, CSS</li>
       <li><strong>Frameworks:</strong> Flask, FastAPI, Gradio</li>
       <li><strong>Learning:</strong> JavaScript, REST APIs, Streamlit, OpenAI API</li>
-      <li><strong>Focus:</strong> Model Integration, LLM Engineering, AI Deployment</li>
+      <li><strong>Focus:</strong> Model Integration, AI Deployment</li>
     </ul>
   </section>
 
@@ -45,40 +45,7 @@
   <section class="p-6 mt-8 max-w-3xl mx-auto bg-white rounded-2xl shadow-md">
     <h2 class="text-2xl font-semibold mb-4 border-b pb-2 text-gray-900">🚀 Projects</h2>
     <div class="space-y-6">
-
-      <!-- AI Chatbot -->
-      <div class="p-5 bg-gray-50 rounded-lg hover:shadow-lg transition transform hover:-translate-y-1">
-        <h3 class="text-xl font-bold text-gray-900">🤖 AI Chatbot using OpenAI</h3>
-        <p class="mt-2 text-gray-700">
-          Built a chatbot with context-aware responses using OpenAI’s GPT API and Streamlit.
-        </p>
-        <div class="mt-3 flex space-x-3">
-          <a href="https://github.com/Sneha12325" target="_blank" class="px-4 py-2 bg-gray-800 text-white text-sm rounded-lg hover:bg-gray-900 transition">View Code</a>
-        </div>
-      </div>
-
-      <!-- Image Caption Generator -->
-      <div class="p-5 bg-gray-50 rounded-lg hover:shadow-lg transition transform hover:-translate-y-1">
-        <h3 class="text-xl font-bold text-gray-900">🖼️ Image Caption Generator</h3>
-        <p class="mt-2 text-gray-700">
-          Used CNN + Transformer to generate image captions on the Flickr8k dataset. 
-          Combines vision and NLP capabilities.
-        </p>
-        <div class="mt-3 flex space-x-3">
-          <a href="https://github.com/Sneha12325" target="_blank" class="px-4 py-2 bg-gray-800 text-white text-sm rounded-lg hover:bg-gray-900 transition">View Code</a>
-        </div>
-      </div>
-
-      <!-- Mini LLM QA App -->
-      <div class="p-5 bg-gray-50 rounded-lg hover:shadow-lg transition transform hover:-translate-y-1">
-        <h3 class="text-xl font-bold text-gray-900">💬 Mini LLM QA App</h3>
-        <p class="mt-2 text-gray-700">
-          Built a question-answering interface using HuggingFace Transformers with a minimal frontend.
-        </p>
-        <div class="mt-3 flex space-x-3">
-          <a href="https://github.com/Sneha12325" target="_blank" class="px-4 py-2 bg-gray-800 text-white text-sm rounded-lg hover:bg-gray-900 transition">View Code</a>
-        </div>
-      </div>
+      
 
       <!-- AI Summarizer -->
       <div class="p-5 bg-gray-50 rounded-lg hover:shadow-lg transition transform hover:-translate-y-1">
@@ -114,3 +81,4 @@
 
 </body>
 </html>
+
